updates on .Primitive
git-svn-id: https://svn.r-project.org/R/trunk@51336 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-lang.texi
+++ b/doc/manual/R-lang.texi
@@ -3854,7 +3854,7 @@ compiled code (primarily compiled @C{} code) to manipulate @R{} objects.
 
 The @code{.Internal} and @code{.Primitive} interfaces are used to call
 @C{} code compiled into @R{} at build time.
-@xref{.Internal and .Primitive, , , R-exts, Writing R Extensions}.
+@xref{.Internal vs .Primitive, , , R-ints, R Internals}.
 
 
 @node Exception handling, Debugging, System and foreign language interfaces, Top
@@ -4112,8 +4112,6 @@ function is evaluated the call to it is printed out.  This mechanism is
 removed by calling @code{untrace} with the function as an argument.
 
 @example
-> get("[<-")
-.Primitive("[<-")
 > trace("[<-")
 > x <- 1:10
 > x[3] <- 4
