add some support for strptime("%z"), make %Z an error. updates now internal code is always used for strptime.
git-svn-id: https://svn.r-project.org/R/trunk@51341 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -343,6 +343,9 @@ NEW FEATURES
     o	any() and all() return early if possible.  This may speed up
 	operations on long vectors.
 
+    o	strptime() now parses "%z" (for the offset from UTC in the
+	RFC822 format of +/-mmmm) but does not yet make use of it.
+
 
 DEPRECATED & DEFUNCT
 
