subversion has moved
git-svn-id: https://svn.r-project.org/R/trunk@51345 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -154,7 +154,7 @@ built in exactly the same way as distributions of R releases.
 
 Sources are also available via @uref{https://svn.R-project.org/R/}, the
 R Subversion repository.  If you have a Subversion client (see
-@uref{http://subversion.tigris.org/}), you can check out and update the
+@uref{http://subversion.apache.org/}), you can check out and update the
 current @samp{r-devel} from @uref{https://svn.r-project.org/R/trunk/} and the
 current @samp{r-patched} from
 @samp{https://svn.r-project.org/R/branches/R-@var{x}-@var{y}-branch/}
