handling of %c in strptime was unusual. clarifications now we control input on all platforms.
git-svn-id: https://svn.r-project.org/R/trunk@51347 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -499,6 +499,10 @@ BUG FIXES
 	character vector is required in functions which coerce
 	internally.
 
+    o	The interpretation by strptime() of %c was non-standard (not
+	that is it ever advisable to use locale- and system-specific
+	input formats).
+
 
 
 
