--- a/NEWS
+++ b/NEWS
@@ -346,6 +346,9 @@ NEW FEATURES
     o	strptime() now parses "%z" (for the offset from UTC in the
 	RFC822 format of +/-mmmm) but does not yet make use of it.
 
+    o	The PCRE library has been updated to version 8.02, a bug-fix
+	release which also updates tables to Unicode 5.02.
+
 
 DEPRECATED & DEFUNCT
 
