list_files: use dynamic memory instead of count_files
Also add a call to R_CheckUserInterrupt() so that listing large
directories with recursive=TRUE can be more quickly interrupted.

The dynamic memory approach seems to be faster, but require slightly
more memory than the two pass approach.

git-svn-id: https://svn.r-project.org/R/trunk@51355 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -483,7 +483,9 @@ BUG FIXES
 	they were called with the correct number of arguments.
 
     o	A potential race condition in list.files() when other processes
-	are operating on the directory has been fixed.
+	are operating on the directory has been fixed; the code now
+	dynamically allocates memory for file listings in a single
+	pass instead of making an initial count pass.
 
     o	mean(x, trim=, na.rm = FALSE) failed to return NA if 'x'
 	contained missing values.  (Reported by Bill Dunlap.)
