--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -40,6 +40,8 @@ NEW FEATURES
 
     o	strftime(format = "%z") now gives the timezone names used by
 	the Olson database and not those used by Windows.
+
+    o	iconv() now supports //TRANSLIT, and this is no longer the default.
 	
 
 BUG FIXES
