fix up iconv(to="ASCII") not to transliterate.
git-svn-id: https://svn.r-project.org/R/trunk@51366 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -40,6 +40,10 @@ NEW FEATURES
 
     o	strftime(format = "%z") now gives the timezone names used by
 	the Olson database and not those used by Windows.
+
+    o	iconv(to = "ASCII") no longer transliterates, but
+	iconv(to = "ASCII//TRANSLIT") will.  This makes
+	tools::showNonASCII() work the same way as on other platforms.
 	
 
 BUG FIXES
